k8s/staging/services-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ExternalName
  externalName: redis.redis-staging.svc.cluster.local
